fix: fixed position-container clipping into the footer

--- a/style/descricaoPet.css
+++ b/style/descricaoPet.css
@@ -10,6 +10,8 @@ body{
 }
 
 main{
+    border:solid 2px #520dff;
+
     margin-top: 42px;
     margin-bottom: 81px;
     margin-left: 77px;
@@ -77,29 +79,32 @@ main h1, h2, p, li{
 /* ---------------- CARD 1 ------------------------*/
 
 .card1{
-    /* border: solid 2px black; */
+    border: solid 2px black;
     display: flex;
     /* flex-wrap: wrap; */
     gap: 44px;
 
-    min-height: 371px;
-    max-height: 371px;
+    /* min-height: 371px; */
+    max-height: 100%;
+    /* max-height: 371px; */
     /* max-height: 800px; */
 
-    /* width: 1008px; */
-    width: 1085px;
+    /* width: 1085px; */
+    width: 100%;
 
     margin-bottom: 76px;
 }
 
 .card1-img{
     width: 439px;
-    height: 349px;
+    /* height: 349px; */
+    height: 100%;
     border-radius: 18px;
     border: solid 2px #EDEDED;
 
     /* margin-bottom: 3px; */
     margin-top: 18px;
+
 }
 
 .paw1{
@@ -120,13 +125,20 @@ main h1, h2, p, li{
 .card1 article{
     background-color: #F9F9F9;
     border: solid 3px #EDEDED;
+    border:solid 2px #FFB30D;
+
     display: flex;
     flex-direction: column;
 
     border-radius: 16px;
     /* padding: 20px; */
     gap: 30px;
-    width: 525px;
+    min-width: 86%;
+    max-width: 95%;
+    /* width: 525px; */
+    /* width: 100%; */
+
+
     /* height: 220px; */
     max-height: 188px;
     /* max-height: 688px; */
@@ -236,9 +248,9 @@ h2{
 }
 
 .section-card2{
-    /* border: solid 2px rgb(106, 100, 191); */
+    border: solid 2px rgb(106, 100, 191);
     /* position: relative; */
-    height: 600px;
+    min-height: 600px;
     width: 100%;
     /* width: 1074px; */
 
